[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "structured-outlines"
version = "0.1.0"
description = "Minimalist, zero-dependency library for structured LLM generation."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Erik Sarriegui" },
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
hf = [
    "transformers>=4.30",
    "torch>=2.0",
]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["structured_outlines*"]